Fix overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,6 +6,7 @@
         rgba(255,255,255,0.5)),
         url("/assets/background.jpg");
     background-size: cover;
+    overflow: hidden;
 }
 
 .logo-container {
